Added table of countries.

--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -4,9 +4,10 @@
 	<head>
 		<%- include ("../partials/head") %>
 	</head>
+	
 	<body class="container">
 
-		<header>
+		<header class="py-3">
 			<%- include ("../partials/header") %>
 		</header>
 
