Fixed grammatical issues on the home page.

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -5,5 +5,5 @@
 	</div>
 </div>
 <div class="container-fluid">
-	<p>These information are provided by <a href="http://covid19api.xapix.io/v2/locations">this website</a>.</p>
+	<p>This information is provided by <a href="http://covid19api.xapix.io/v2/locations">this website</a>.</p>
 </div>
