--- a/src/views/partials/content.ejs
+++ b/src/views/partials/content.ejs
@@ -1,10 +1,12 @@
 
-<p><b>Aggregate Statistics:</b></p>
-<ul class="list-group" style="width: 50%">
-	<li class="list-group-item">Confirmed Cases<span class="badge badge-warning" style="float: right"><%= latest.confirmed %></span></li>
-	<li class="list-group-item">Deaths<span class="badge badge-danger" style="float: right"><%= latest.deaths %></span></li>
-	<li class="list-group-item">Recovered<span class="badge badge-success" style="float: right"><%= latest.recovered %></span></li>
-</ul>
+<div class="container">
+	<p><b>Aggregate Statistics:</b></p>
+	<ul class="list-group">
+		<li class="list-group-item">Confirmed Cases<span class="badge badge-warning" style="float: right"><%= latest.confirmed %></span></li>
+		<li class="list-group-item">Deaths<span class="badge badge-danger" style="float: right"><%= latest.deaths %></span></li>
+		<li class="list-group-item">Recovered<span class="badge badge-success" style="float: right"><%= latest.recovered %></span></li>
+	</ul>
+</div>
 
 <div style="padding-top: 2%">
 	<div class="table-responsive">
